update persistence