@@ -38,7 +38,7 @@
         <slf4j.version>1.7.36</slf4j.version>
         <junit.version>4.13.2</junit.version>
         <jupiter.version>5.10.2</jupiter.version>
-        <netty.version>4.1.110.Final</netty.version>
+        <netty.version>4.1.111.Final</netty.version>
         <jackson.version>2.17.1</jackson.version>
     </properties>
 
@@ -57,8 +57,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <compilerArgument>-parameters</compilerArgument>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <parameters>true</parameters>
+                    <enablePreview>true</enablePreview>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
